
package sysdev.das;
option java_package = "com.ctrip.sysdev.das.domain";

enum CRUD{
    //SELECT 操作
    GET = 0;
    //增删改操作
    CUD = 1;
}

enum StatementType {
    SQL = 0;
    SP = 1;
}

message AvailableType{
    required int32 current = 1;
    optional bool bool_arg = 2;
    optional int32 int32_arg = 3;
    optional int64 int64_arg = 4;
    optional double double_arg = 5;
    optional string string_arg = 6;
    optional bytes bytes_arg = 7;
}

message SqlParameters{
      optional int32 dbType = 1;
      optional int32 direction = 2;
      optional bool isNull = 3;
      optional string name = 4;
      optional int32 index = 5;
      optional bool sensitive = 6;
      optional AvailableType value = 7;
}

message RequestMessage {
    optional StatementType stateType = 1;
    optional bool master = 2;
    optional CRUD crud = 3;

    //When statement type is SQL, the name is a sql statement
    //else the name is a sp name
    optional string name = 4;

    repeated SqlParameters parameters = 5; 

    optional int32 flags = 6;

}


message Request {
  //Version should be outside of this object
  //required int32 version = 1;
  required string id = 1;
  optional string db = 2;
  optional string cred = 3;
  optional RequestMessage msg = 4;
}

message ResponseHeader{
    required string name = 1;
    required int32 type = 2;
  }

message Response {
  //required int32 version = 1;
  required string id = 1;

  optional CRUD resultType = 2;

  //header is not null, it is a SELECT Response
  repeated ResponseHeader header = 3;

  //header is null, it is a CUD Response
  optional int32 affectRows = 4;
}

message Row{
    repeated AvailableType columns = 1;
}

message InnerResultSet {
 
  required bool last = 1;

  repeated Row rows = 2;
  
}